--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -7353,6 +7353,66 @@ body {
   }
 }
 
+// .creator-content-card-container .creator-content-card .creator-content-card__stats .creator-content-stat-box {
+//   .like-button {
+//     &:hover, &.active {
+//       svg {
+//           animation: heartLikedPopUpAnimation 0.45s ease-out;
+
+//           path {
+//               fill: var(--like-color);
+//               stroke: var(--like-color) !important;
+//           }
+//       }
+//     }
+//   }
+//   .thumup-btn {
+//     &:hover, &.active {
+//       svg {
+//         path {
+//           stroke: white;
+//           &:nth-child(1) {
+//             stroke: black;
+//             fill: black;
+//           }
+//         }
+//       }
+//     }
+//   }
+//   .views-btn {
+//     &:hover, &.active {
+//         button {
+//             svg {
+//                 path {
+//                     &:nth-child(1) {
+//                         stroke: #A77BFF;
+//                         fill: #A77BFF;
+//                     }
+
+//                     &:nth-child(2) {
+//                         stroke: #A77BFF;
+//                         fill: #fff;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
+//   .massage-btn {
+//     &:hover, &.active {
+//       svg {
+//         path {
+//           stroke: white;
+//           &:nth-child(1) {
+//             fill: #2979ff;
+//             stroke: #2979ff;
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
+
 // country flags in circle added by mihir for requirments
 .flag-circle {
   width: 22px;
@@ -7386,4 +7446,59 @@ body {
 .resend-btn:disabled {
   opacity: 0.6;
   cursor: not-allowed;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.swal2-container {
+  background-color: #000000b8 !important;
+  backdrop-filter: blur(2px);
+  transition: var(--transition-normal);
+  .swal2-popup {
+    background: #fff;
+    border-radius: 20px;
+    padding: 30px;
+    box-shadow: 0 6px 12px -4px #0808081f, 0 2px 13.5px 1px #08080803;
+    .swal2-icon {
+      margin: 0 auto;
+    }
+    h2 {
+      color: var(--color-text-active);
+      font-size: 32px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 100%;
+      font-family: var(--font-family-heading);
+    }
+    .actionsbtn-wrapper {
+      align-items: center;
+      gap: 10px;
+      display: inline-flex;
+      width: 100%;
+      button {
+        width: 100%;
+        height: 100%;
+        padding: 10px;
+        max-width: 48%;
+        border-radius: 14px;
+        &:hover {
+          transform: translateY(-1px);
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 6px 10px;
+        }
+      }
+    }
+  }
 }
