--- a/public/styles/components/components.css
+++ b/public/styles/components/components.css
@@ -3982,6 +3982,43 @@
  
            .noti-more-actions {
              display: flex;
+
+             &.iconbtn {
+              gap: 5px;
+              button {
+                padding: 5px;
+                width: 28px;
+                height: 28px;
+                border-radius: 7px;
+                &.viewbtn {
+                  svg {
+                    path {
+                      stroke: rgb(167, 123, 255);
+                      fill: none;
+                    }
+                    circle {
+                      stroke: rgb(167, 123, 255);
+                      fill: none;
+                    }
+                  }
+                  &:hover {
+                    background-color: rgb(167, 123, 255);
+                    svg path,
+                    svg circle {
+                      stroke: #fff;
+                    }
+                  }
+                }
+                &.acceptbtn {
+                  svg {
+                    path {
+                      stroke: #008141;
+                      fill: none;
+                    }
+                  }
+                }
+              }
+             }
  
              .rel-user-more-opts-wrapper {
                &[data-more-actions-toggle-element] {
