--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -2040,6 +2040,10 @@ body {
           max-width: 30%;
           margin: 10px auto;
         }
+        .loginbtn_wrap {
+          max-width: 60%;
+          margin: 0 auto;
+        }
         .creator_maingrid {
           display: grid;
           grid-template-columns: 1fr 1fr;
@@ -2080,6 +2084,9 @@ body {
         max-height: -webkit-fill-available;
       }
     }
+    .loginbtn_wrap {
+      max-width: 100% !important;
+    }
     .img_wrap {
       display: none;
     }
@@ -2117,7 +2124,6 @@ body {
         }
       }
     }
-
     .loginbtn_wrap {
       display: flex;
       flex-direction: column;
@@ -2170,6 +2176,9 @@ body {
       align-self: stretch;
       height: calc(100vh - 295px);
       overflow-y: auto;
+    }
+    .loginbtn_wrap {
+      max-width: 100% !important;
     }
     .cont_wrap .logo_wrap {
       max-width: 260px;
@@ -3913,6 +3922,135 @@ body {
           transition: var(--transition-fast);
           svg {
             max-width: 20px;
+          }
+        }
+      }
+      .actions {
+        gap: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: nowrap;
+        button {
+          cursor: pointer;
+          width: 100%;
+          max-width: 50%;
+          padding: 14px 8px;
+          border-radius: 14px;
+          height: -webkit-fill-available;
+        }
+      }
+    }
+    &.notipost-modal {
+      .close-btn {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+      }
+      h3.title {
+        justify-content: start;
+        font-size: 28px;
+        margin-bottom: 0px;
+      }
+      .post_wrap {
+        align-items: center;
+        gap: 16px;
+        display: flex;
+        margin: 20px 0px;
+        .img_wrap {
+          flex-shrink: 0;
+          width: 220px;
+          position: relative;
+          aspect-ratio: 1;
+          border-radius: 16px;
+          overflow: hidden;
+          &::before {
+            content: "";
+            border-radius: inherit;
+            border: 2px solid #ffffff7a;
+            display: block;
+            position: absolute;
+            inset: 0;
+          }
+          img, video {
+            aspect-ratio: 1;
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+          }
+        }
+        .details_wrap {
+          display: flex;
+          flex-direction: column;
+          gap: 8px;
+          .charge_wrap {
+            align-items: center;
+            gap: 6px;
+            display: flex;
+            p {
+              color: var(--color-text-active);
+              font-size: 16px;
+              font-weight: 500;
+              line-height: 100%;
+              font-family: var(--font-family-heading);
+            }
+            .right_box {
+              margin-left: auto;
+              background: #f9f9f9;
+              border: 1.5px solid #ebebeb;
+              border-radius: 13px;
+              width: 100%;
+              max-width: 50px;
+              padding: 10px;
+              display: grid;
+              place-items: center;
+              span {
+                font-family: var(--font-family-heading);
+                transition: var(--transition-fast);
+                letter-spacing: .25px;
+                background: linear-gradient(103.7deg, #fece26 4.76%, #e5741f 118.16%);
+                -webkit-text-fill-color: transparent;
+                color: #0000;
+                -webkit-background-clip: text;
+                background-clip: text;
+                font-size: 17px;
+                font-weight: 500;
+                line-height: 17px;
+              }
+            }
+          }
+          p {
+            font-size: 14px;
+            line-height: 18px;
+            display: -webkit-box;
+            -webkit-line-clamp: 4;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+          }
+          ul {
+            margin: 0px;
+            li {
+              align-items: center;
+              gap: 6px;
+              display: flex;
+              color: var(--color-text-active);
+              font-size: 16px;
+              font-weight: 500;
+              line-height: 100%;
+              font-family: var(--font-family-heading);
+              margin-bottom: 10px;
+              &:last-child {
+                margin-bottom: 0px;
+              }
+              img.user_icons {
+                aspect-ratio: 1;
+                border-radius: 26px;
+                flex-shrink: 0;
+                width: 24px;
+                position: relative;
+                overflow: hidden;
+              }
+            }
           }
         }
       }
