--- a/public/styles/components/components.css
+++ b/public/styles/components/components.css
@@ -3953,6 +3953,7 @@
          display: flex;
          flex-direction: column;
          gap: 4px;
+         width: 100%;
  
          .noti-title-time-wrapper {
            display: flex;
@@ -3972,7 +3973,7 @@
  
            .noti-time {
              display: flex;
-             margin-right: 4px;
+             margin-left: auto;
  
              span {
                font-size: 12px;
