--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -594,6 +594,11 @@ body {
     border-radius: 20px;
     padding: 30px;
     box-shadow: 0 6px 12px -4px #0808081f, 0 2px 13.5px 1px #08080803;
+    .swal2-close {
+      position: absolute;
+      top: 5px;
+      right: 5px;
+    }
     .swal2-icon {
       margin: 0 auto;
     }
@@ -613,9 +618,56 @@ body {
       font-family: var(--font-family-base);
       transition: var(--transition-fast);
     }
+    label {
+      text-align: left;
+      color: #000;
+      margin-bottom: 6px;
+      font-size: 14px;
+      line-height: 18px;
+      display: inline-block;
+      width: 100%;
+      &.right {
+        text-align: right;
+        color: #505050;
+        justify-content: end;
+        gap: 5px;
+        width: 100%;
+        margin-bottom: 0;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 14px;
+        display: inline-flex;
+      }
+    }
+    input, textarea {
+      margin: 0px;
+      padding: 12px;
+      font-size: 14px;
+      color: #716f6f;
+      background-color: #fff;
+      border: 1.5px solid #ebebeb;
+      border-radius: 13px;
+      width: 100%;
+      min-height: 36px;
+      padding: 0 12px;
+    }
     .selectcont_wrap {
-      
-      
+      display: inline-flex;
+      flex-direction: column;
+      gap: 12px;
+      .select_wrap {
+        display: inline-flex;
+        flex-direction: column;
+        gap: 12px;
+        width: 100%;
+        width: 100%;
+        .radio_wrap {
+          width: 100%;
+          display: inline-flex;
+          align-items: center;
+        }
+      }
     }
     .actionsbtn-wrapper {
       align-items: center;
@@ -806,6 +858,7 @@ body {
   font-size: 14px;
   transition: all 0.3s ease;
   input[type="radio"] {
+    flex-shrink: 0;
     appearance: none;
     width: 20px;
     height: 20px;
@@ -4066,6 +4119,43 @@ body {
           }
         }
       }
+      .swiper {
+        .swiper-button-prev, .swiper-button-next {
+          width: 24px !important;
+          height: 24px !important;
+          svg {
+            width: 14px;
+            height: 14px;
+          }
+        }
+      }
+      .timer_wrap {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        p {
+          color: #020202;
+          font-size: 20px;
+          font-weight: 500;
+          line-height: 100%;
+          text-transform: capitalize;
+          font-family: var(--font-family-heading);
+        }
+        .fcc__unit_time, .fcc__separator {
+          margin-bottom: 0 !important;
+        }
+        // .fcc__digit_block, .fcc__digit_block span {
+        //   font-family: var(--font-family-heading);
+        //   font-weight: 500;
+        //   letter-spacing: 0.25px;
+        //   background: linear-gradient(103.7deg, rgb(254, 206, 38) 4.76%, rgb(229, 116, 31) 118.16%);
+        //   -webkit-background-clip: text;
+        //   -webkit-text-fill-color: transparent;
+        //   background-clip: text;
+        //   color: transparent;
+        // }
+      }
       .actions {
         gap: 10px;
         display: flex;
@@ -4506,6 +4596,26 @@ body {
             svg {
               max-width: 22px;
             }
+          }
+        }
+      }
+      &.notipost-modal {
+        h3.title {
+          justify-content: start;
+          font-size: 22px;
+          max-width: 93%;
+        }
+        .post_wrap {
+          flex-direction: column;
+          .img_wrap {
+            flex-shrink: 0;
+            width: 100%;
+          }
+        }
+        .timer_wrap {
+          flex-direction: column;
+          p {
+            font-size: 18px;
           }
         }
       }
@@ -6530,7 +6640,42 @@ body {
   width: 100%;
   height: 100%;
 }
-
+.swiper {
+  .swiper-button-prev, .swiper-button-next {
+    background-color: #010405;
+    border-radius: 30px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: var(--transition-fast);
+    box-shadow: var(--card-shadow);
+    svg {
+      width: 18px;
+      height: 18px;
+      path {
+        fill: #fece26;
+      }
+    }
+    &:hover {
+      background: linear-gradient(93.25deg, #e5741f -49.57%, #fece26 98.1%);
+      svg {
+        path {
+          fill: #010405;
+        }
+      }
+    }
+  }
+  .swiper-pagination {
+    .swiper-pagination-bullet {
+      background: linear-gradient(93.25deg, #e5741f -49.57%, #fece26 98.1%);
+      &.swiper-pagination-bullet-active {
+        background: linear-gradient(93.25deg, #e5741f -49.57%, #fece26 98.1%);
+      }
+    }
+  }
+}
 .moneyboy-post__container.card {
   .post_swiper {
     width: 100%;
