--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -602,6 +602,18 @@ body {
     .swal2-icon {
       margin: 0 auto;
     }
+    .swal2-validation-message {
+      background: #f9f9f9;
+      border: 1.5px solid #ebebeb;
+      border-radius: 8px;
+      color: #716f6f;
+      font-size: 13px;
+      line-height: 13px;
+      font-weight: 500;
+      letter-spacing: 0;
+      font-family: var(--font-family-base);
+      transition: var(--transition-fast);
+    }
     h2 {
       color: var(--color-text-active);
       font-size: 32px;
