--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -6,18 +6,6 @@ body {
   background: #f4f4f4;
 }
 
-// mixin Class Start
-@mixin skeleton {
-  background: linear-gradient(
-    90deg,
-    #e5e7eb 25%,
-    #f3f4f6 50%,
-    #e5e7eb 75%
-  );
-  background-size: 200% 100%;
-  animation: skloading 1.2s infinite linear;
-}
-
 .label-input input:disabled {
   color: #999;
   opacity: 0.7;
@@ -267,7 +255,7 @@ body {
     opacity: 0;
   }
 }
-@keyframes skloading {0% { background-position: 200% 0; }100% { background-position: -200% 0; }}
+@keyframes skloading {0% {background-position: 200% 0;}100% {background-position: -200% 0;}}
 
 // Skeleton Loading Animations
 .moneyboy-post__container {
@@ -809,6 +797,37 @@ body {
         &:hover {
           transform: translateY(-1px);
           box-shadow: rgba(0, 0, 0, 0.1) 0px 6px 10px;
+        }
+      }
+    }
+  }
+}
+
+.PhotoView-Portal {
+  .PhotoView-Slider__ArrowLeft, .PhotoView-Slider__ArrowRight {
+    background-color: transparent;
+    border-radius: 30px;
+    width: 36px;
+    height: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    backdrop-filter: blur(15px);
+    transition: var(--transition-normal);
+    box-shadow: var(--card-shadow);
+    background: linear-gradient(93.25deg, #e5741f -49.57%, #fece26 98.1%);
+    svg {
+      width: 22px;
+      height: 22px;
+      path {
+        fill: #FFF;
+      }
+    }
+    &:hover {
+      background: linear-gradient(93.25deg, #e5741f -49.57%, #fece26 98.1%);
+      svg {
+        path {
+          fill: #010405;
         }
       }
     }
@@ -1523,6 +1542,23 @@ body {
     &:hover::after, &:hover::before {
       opacity: 1;
       transform: translateX(-50%) translateY(0);
+    }
+  }
+  button[data-tooltip][data-position="right"] {
+    &::after {
+      left: calc(100% + 8px);
+      top: 50%;
+      transform: translateY(-50%) translateX(-6px);
+    }
+    &::before {
+      left: 100%;
+      top: 50%;
+      transform: translateY(-50%);
+      border-color: transparent #1f1f1f transparent transparent;
+    }
+    &:hover::after,
+    &:hover::before {
+      transform: translateY(-50%) translateX(0);
     }
   }
   @media (hover: none) {
@@ -4159,6 +4195,9 @@ body {
       }
     }
     &.notipost-modal {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
       .close-btn {
         position: absolute;
         top: 20px;
@@ -4173,7 +4212,6 @@ body {
         align-items: center;
         gap: 16px;
         display: flex;
-        margin: 20px 0px;
         .img_wrap {
           flex-shrink: 0;
           width: 220px;
@@ -4200,6 +4238,7 @@ body {
           display: flex;
           flex-direction: column;
           gap: 8px;
+          width: 100%;
           .charge_wrap {
             align-items: center;
             gap: 6px;
@@ -4217,7 +4256,7 @@ body {
               border: 1.5px solid #ebebeb;
               border-radius: 13px;
               width: 100%;
-              max-width: 50px;
+              max-width: fit-content;
               padding: 10px;
               display: grid;
               place-items: center;
@@ -4307,6 +4346,63 @@ body {
         //   background-clip: text;
         //   color: transparent;
         // }
+      }
+      .approval_wrap {
+        flex-direction: column;
+        gap: 4px;
+        padding: 10px;
+        display: flex;
+        box-shadow: var(--card-shadow);
+        transition: var(--transition-normal);
+        border-radius: 12px;
+        .head {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          h3 {
+            width: 100%;
+            text-align: left;
+            font-size: 16px;
+            line-height: 100%;
+            letter-spacing: 0.3px;
+            font-weight: 500;
+          }
+          svg {
+            flex-shrink: 0;
+            width: 18px;
+            height: 18px;
+          }
+        }
+        &.approved {
+          color: #1a7f4b !important;
+          background: #e6f7ee;
+          border: 1.5px solid #008000;
+          .head {
+            * {
+              color: #1a7f4b !important;
+            }
+          }
+        }
+        &.rejected {
+          color: #c62828 !important;
+          background-color: #faebeb;
+          border: 1.5px solid #cd3f3f;
+          .head {
+            * {
+              color: #c62828 !important;
+            }
+          }
+        }
+        &.pending {
+          color: #616161 !important;
+          background: #f4f4f4;
+          border: 1.5px solid #616161;
+          .head {
+            * {
+              color: #616161 !important;
+            }
+          }
+        }
       }
       .actions {
         gap: 10px;
