--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -4252,26 +4252,8 @@ body {
             }
             .right_box {
               margin-left: auto;
-              background: #f9f9f9;
-              border: 1.5px solid #ebebeb;
-              border-radius: 13px;
-              width: 100%;
-              max-width: fit-content;
-              padding: 10px;
-              display: grid;
-              place-items: center;
-              span {
-                font-family: var(--font-family-heading);
-                transition: var(--transition-fast);
-                letter-spacing: .25px;
-                background: linear-gradient(103.7deg, #fece26 4.76%, #e5741f 118.16%);
-                -webkit-text-fill-color: transparent;
-                color: #0000;
-                -webkit-background-clip: text;
-                background-clip: text;
-                font-size: 17px;
-                font-weight: 500;
-                line-height: 17px;
+              .premium-btn {
+                padding: 12px 16px;
               }
             }
           }
