--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -780,6 +780,34 @@ body {
           width: 100%;
           display: inline-flex;
           align-items: center;
+          input[type="checkbox"] {
+            flex-shrink: 0;
+            appearance: none;
+            width: 20px;
+            height: 20px;
+            min-height: 20px;
+            padding: 0;
+            border: 1.5px solid #f59e0b;
+            border-radius: 50%;
+            position: relative;
+            cursor: pointer;
+            &:checked {
+              border: none;
+              background: linear-gradient(103.7deg, #fece26 4.76%, #e5741f 118.16%);
+              // optional inner dot
+              &::after {
+                content: "";
+                width: 8px;
+                height: 8px;
+                background: transparent;
+                border-radius: 50%;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+              }
+            }
+          }
         }
       }
     }
@@ -1832,6 +1860,12 @@ body {
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
+.lineclamp4 {
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
 
 /* Login Page Start */
 .login_wrap {
@@ -2812,9 +2846,26 @@ body {
         }
       }
     }
+    &.description {
+      padding-top: 0px;
+      p {
+        color: #505050;
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 120%;
+        transition: var(--transition-fast);
+        font-family: var(--font-family-base);
+      }
+    }
   }
-  .video_wrap {
-    
+  .posterimg {
+    aspect-ratio: 3;
+    width: 100%;
+    img.posterimg {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 }
 
