--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -268,6 +268,7 @@ body {
     .post__time,
     .line,
     .moneyboy-post__img,
+    .moneyboy-post__actions li,
     ul li {
       background: linear-gradient(90deg, #e5e7eb 25%,#f3f4f6 50%,#e5e7eb 75%);
       background-size: 200% 100%;
