--- a/public/styles/components/components.css
+++ b/public/styles/components/components.css
@@ -1222,41 +1222,61 @@
                font-size: 16px;
                font-size: 14px;
                font-size: 13px;
-               &.btntooltip_wrapper {
+               &.tagged_userlist {
                 position: relative;
-                display: inline-flex;
+                display: flex;
+                gap: 4px;
                 align-items: center;
-                gap: 6px;
-                overflow: visible;
-                z-index: 5;
-                button[data-tooltip]::after {
-                  -webkit-backdrop-filter: blur(15px);
-                  backdrop-filter: blur(15px);
-                  border-radius: 15px;
-                  border: 1.5px solid #ffffff7a;
-                  white-space: pre-line;
-                  text-align: left;
-                  line-height: 1.5;
-                  min-width: 90px;
-                  transition: opacity 0.18s ease, transform 0.18s ease;
+                button.active-down-effect {
+                  cursor: pointer;
+                  gap: 2px;
+                  color: #e5741f;
+                  display: inline-flex;
+                  align-items: center;
+                } 
+                .user-dropdown {
+                  z-index: 3;
+                  background: #f9f9f9;
+                  border: 1.5px solid #ebebeb;
+                  border-radius: 12px;
+                  padding: 8px 12px 8px 8px;
+                  width: 100%;
+                  position: absolute;
+                  top: 100%;
+                  box-shadow: inset 0 0 0 3px #fff, 0 4px 13.5px #00000040;
+                  ul {
+                    margin: 0px;
+                    li {
+                      align-items: center;
+                      gap: 6px;
+                      display: flex;
+                      color: var(--color-text-active);
+                      font-size: 13px;
+                      font-weight: 500;
+                      line-height: 100%;
+                      margin-bottom: 5px;
+                      will-change: transform;
+                      transition: var(--transition-normal);
+                      font-family: var(--font-family-base);
+                      &:hover {
+                        transform: scale(1.025);
+                      }
+                      &:last-child {
+                        margin-bottom: 0px;
+                      }
+                      img.user_icons {
+                        aspect-ratio: 1;
+                        border-radius: 26px;
+                        flex-shrink: 0;
+                        width: 20px;
+                        position: relative;
+                        overflow: hidden;
+                      }
+                    }
+                  }
                 }
-                button[data-tooltip][data-position="right"]::after {
-                  left: calc(100% + 10px);
-                  top: 50%;
-                  bottom: auto;
-                  transform: translateY(-50%) translateX(6px);
-                }
-                button[data-tooltip][data-position="right"]::before {
-                  left: 100%;
-                  top: 50%;
-                  bottom: auto;
-                  transform: translateY(-50%);
-                  border-color: transparent #1f1f1f transparent transparent;
-                }
-                button[data-tooltip][data-position="right"]:hover::after {
-                  transform: translateY(-20%) translateX(-1px);
-                }
-              }
+               }
+
               .taglist {
                 display: flex;
                 gap: 6px;
@@ -1359,6 +1379,48 @@
                 }
              } */
        }
+     }
+
+     .taggedlist_wrap {
+      max-width: 220px; 
+      overflow-x: auto;
+      overflow-y: hidden;
+      white-space: nowrap;
+      padding-bottom: 4px;
+      ul {
+        margin: 0px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: space-around;
+        gap: 8px;
+        li {
+          align-items: center;
+          gap: 3px;
+          display: flex;
+          color: var(--color-text-active);
+          font-size: 13px;
+          font-weight: 500;
+          line-height: 100%;
+          margin-bottom: 0px;
+          will-change: transform;
+          transition: var(--transition-normal);
+          font-family: var(--font-family-base);
+          &:hover {
+            transform: scale(1.025);
+          }
+          &:last-child {
+            margin-bottom: 0px;
+          }
+          img.user_icons {
+            aspect-ratio: 1;
+            border-radius: 26px;
+            flex-shrink: 0;
+            width: 20px;
+            position: relative;
+            overflow: hidden;
+          }
+        }
+      }
      }
  
      .moneyboy-post__desc {
