--- a/public/styles/components/components.css
+++ b/public/styles/components/components.css
@@ -1272,6 +1272,12 @@
                         position: relative;
                         overflow: hidden;
                       }
+                      span {
+                        width: 100%;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                      }
                     }
                   }
                 }
