--- a/public/styles/components/components.css
+++ b/public/styles/components/components.css
@@ -1283,34 +1283,49 @@
                 }
                }
 
-              .taglist {
+               .taglist {
                 display: flex;
-                gap: 6px;
                 align-items: center;
-                overflow-x: auto;
-                overflow-y: hidden;
-                white-space: nowrap;
+                list-style: none;
                 padding: 0;
                 margin: 0;
-                list-style: none;
-                -webkit-overflow-scrolling: touch;
-                scrollbar-width: none;
-                -ms-overflow-style: none;
-                &::-webkit-scrollbar {
-                  display: none;
-                }
+              
                 li {
-                  flex: 0 0 auto; 
-                  .taglink {
-                    display: block;
-                    border-radius: 8px;
-                    padding: 4px 6px;
-                    font-weight: 600;
-                    color: #000;
-                    font-size: 12px;
-                    line-height: 100%;
-                    background: linear-gradient(93.25deg, #e5741f -49.57%, #fece26 98.1%);
+                  display: inline-flex;
+                  align-items: center;
+                  justify-content: center;
+                  margin-left: -10px;
+              
+                  &:first-child {
+                    margin-left: 0;
                   }
+              
+                  .user_icons {
+                    width: 26px;
+                    height: 26px;
+                    object-fit: cover;
+                    border-radius: 50%;
+                    cursor: pointer;
+                    transition: transform 0.3s ease;
+                    border: 2px solid #fff;
+                  }
+              
+                  &:hover .user_icons {
+                    transform: scale(1.1);
+                  }
+                }
+              
+                .more-count {
+                  width: 28px;
+                  height: 28px;
+                  border-radius: 50%;
+                  /* color: #333;
+                  background: #eee; */
+                  color: #FFF;
+                  background: linear-gradient(93.25deg, #e5741f -49.57%, #fece26 98.1%);
+                  font-size: 12px;
+                  font-weight: 600;
+                  border: 2px solid #FFF;
                 }
               }
              }
@@ -1686,6 +1701,20 @@
           }
         }
         
+       }
+     }
+     .fdpost_comment {
+       display: flex;
+       flex-direction: column;
+       .like-deslike-wrap {
+        flex-direction: column;
+        ul {
+          width: 100%;
+        }
+        .btn-primary {
+          width: 100%;
+          max-width: 100%;
+        }
        }
      }
    }
