--- a/public/styles/components/components.css
+++ b/public/styles/components/components.css
@@ -72,6 +72,7 @@
              display: flex;
              align-items: center;
              gap: 6px;
+             position: relative;
  
              li {
                display: flex;
@@ -111,6 +112,28 @@
                  &:active {
                    transform: scale(0.95);
                  }
+               }
+               &.noti-btn {
+                position: relative;
+                display: inline-block;
+                span {
+                  position: absolute;
+                  top: -3px;
+                  right: -3px;
+                  min-width: 16px;
+                  height: 16px;
+                  padding: 0 3px;
+                  color: var(--color-secondary);
+                  border: 1.5px solid #FFF;
+                  background-color: var(--color-text-active);
+                  font-size: 10px;
+                  font-weight: 600;
+                  border-radius: 50%;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  line-height: 1;
+                }
                }
              }
            }
