--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -6,6 +6,10 @@ body {
   background: #f4f4f4;
 }
 
+.cusscrolling {
+
+}
+
 .label-input input:disabled {
   color: #999;
   opacity: 0.7;
@@ -1853,6 +1857,9 @@ body {
 .justify-center {
   justify-content: center;
 }
+.justify-end {
+  justify-content: end !important;
+}
 .max-w-50 {
   max-width: 50%;
 }
@@ -2993,11 +3000,7 @@ body {
           &::before {
             content: "";
             color: #f5b400;
-            background: linear-gradient(
-              103.7deg,
-              #fece26 4.76%,
-              #e5741f 118.16%
-            );
+            background: linear-gradient(103.7deg, #fece26 4.76%, #e5741f 118.16%);
             width: 7px;
             height: 7px;
             border-radius: 30px;
@@ -3363,9 +3366,9 @@ body {
             }
             .right_box {
               margin-left: auto;
-              .form-input {
-                padding: 8px;
-                max-width: 120px;
+              .btn-primary {
+                cursor: pointer;
+                padding: 5px 14px;
               }
             }
           }
@@ -3509,8 +3512,48 @@ body {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        border-radius: 0px;
         .profile-card {
           padding: 0px;
+          .radio-card {
+            padding: 7px;
+            border-radius: 16px;
+            .radio-indicator {
+              position: relative;
+              margin-left: auto;
+              .checkmark {
+                display: block;
+                width: 20px;
+                height: 20px;
+                position: relative;
+                border: 1.5px solid #FECE26;
+                border-radius: 30px;
+                transition: all 0.2s ease;
+              }
+              input {
+                position: absolute;
+                opacity: 0;
+                cursor: pointer;
+                &:checked + .checkmark {
+                  &::after {
+                    content: "";
+                    background-color: #fece26;
+                    width: 10px;
+                    height: 10px;
+                    border-radius: 30px;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    margin-right: -50%;
+                    transform: translate(-50%, -50%);
+                  }
+                }
+              }
+            }
+            &.active {
+              background-color: #FECE260A;
+            }
+          }
         }
       }
       .creators-footer {
@@ -4352,6 +4395,18 @@ body {
               margin-left: auto;
               .premium-btn {
                 padding: 12px 16px;
+                &:hover {
+                  &:before {
+                    opacity: 1;
+                  }
+                  span {
+                    background: linear-gradient(103.7deg, #fece26 4.76%, #e5741f 118.16%);
+                    -webkit-background-clip: text;
+                    background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                    color: transparent;
+                  }
+                }
               }
             }
           }
