--- a/public/styles/components/components.css
+++ b/public/styles/components/components.css
@@ -792,6 +792,20 @@
                      }
                    }
                  }
+                 &.mstore-link {
+                  svg {
+                    path {
+                      stroke-width: 4px;
+                    }
+                  }
+                  &:hover {
+                    svg {
+                      path {
+                        fill: #000;
+                      }
+                    }
+                  }
+                 }
                }
              }
            }
